idf_component_register(SRCS "colour.c" "hello_world_main.c"
                            "sys_utils.c"
                            "sys_timers.c"
							"task_console.c"
							"task_rgb_btn.c"
                            "drv_rgb_led_strip.c" 
                            
                    INCLUDE_DIRS "")
